tests/pass/global_mutation.tc
int g = 1;

int bump() {
  g = g + 4;
  return g;
}

int main() {
  return bump();
}
