tests/fail/call_variable.tc
int main() {
  int helper = 1;
  return helper();
}
